<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame_all_course"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="start|top">

            <com.example.myapplication.widgets.CircleImageView
                android:id="@+id/headPortrait"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@mipmap/circle" />

            <TextView
                android:id="@+id/headText"
                android:layout_width="360dp"
                android:layout_height="75dp"
                android:layout_marginStart="50dp" />

        </FrameLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="660dp">

        </androidx.viewpager.widget.ViewPager>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/leftMenu"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame_left"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="start|top">

            <com.example.myapplication.widgets.CircleImageView
                android:id="@+id/headPortraitLeft"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@mipmap/circle" />

            <TextView
                android:id="@+id/headTextLeft"
                android:layout_width="360dp"
                android:layout_height="75dp"
                android:layout_marginStart="50dp" />

        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ownCourse_left_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/tab1_selected" />

            <TextView
                android:id="@+id/ownCourse_left"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginStart="60dp"
                android:gravity="center"
                android:text="@string/own"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/allCourse_left_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ownCourse_left_image"
                app:srcCompat="@mipmap/tab2_selected" />

            <TextView
                android:id="@+id/allCourse_left"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginStart="60dp"
                android:gravity="center"
                android:text="@string/all"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ownCourse_left" />

            <ImageView
                android:id="@+id/lecture_left_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/allCourse_left_image"
                app:srcCompat="@mipmap/tab3_selected" />

            <TextView
                android:id="@+id/lecture_left"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginStart="60dp"
                android:gravity="center"
                android:text="@string/lec"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/allCourse_left" />

            <ImageView
                android:id="@+id/ref_left_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lecture_left_image"
                app:srcCompat="@mipmap/tab4_selected" />

            <TextView
                android:id="@+id/ref_left"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginStart="60dp"
                android:gravity="center"
                android:text="@string/ref"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lecture_left" />

            <ImageView
                android:id="@+id/GPA_left_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ref_left_image"
                app:srcCompat="@mipmap/tab5_selected" />

            <TextView
                android:id="@+id/GPA_left"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginStart="60dp"
                android:gravity="center"
                android:text="@string/gpa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ref_left" />

            <Button
                android:id="@+id/setting"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/loggout"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
